--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <main>
         <section id="hero" class="hero-section">
             <div class="hero-content">
-                <h1>League of Agent</h1>
+                <h1>League of Agents</h1>
                 <p class="typewriter">1st Agent to Agent Security Solution</p>
-                <p class="typewriter-delay">Empowering Web3 with Advanced AI Security <<<</p>
+                <p class="typewriter-delay">Empowering Web3 with Advanced AI Security </p>
                 <a href="#services" class="cta-button">Initialize Security Agent</a>
             </div>
             <div class="hero-image">
