--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
     <header class="header">
@@ -33,15 +35,15 @@
             <div class="contact-info">
                 <h2>Contact Information</h2>
                 <div class="info-item">
-                    <span class="icon">🌐</span>
+                    <span class="icon"><i class="fas fa-globe"></i></span>
                     <p>www.loagents.com</p>
                 </div>
                 <div class="info-item">
-                    <span class="icon">📧</span>
+                    <span class="icon"><i class="fas fa-envelope"></i></span>
                     <p>contact@loagents.com</p>
                 </div>
                 <div class="info-item">
-                    <span class="icon">𝕏</span>
+                    <span class="icon"><i class="fab fa-x-twitter"></i></span>
                     <p>@loagents</p>
                 </div>
             </div>
