--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     <main>
         <section class="contact-hero">
             <h1>Contact Us</h1>
-            <p>We look forward to hearing from you!</p>
+            <p>Send us meesage to join waitlist and try our security product!</p>
         </section>
 
         <section class="contact-container">
